[package]
name = "pxyrs"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-core = { version = "0.1" }
tokio-io = { version = "0.1" }
tokio-util = { version = "0.2", features = ["full"] }
tokio-codec = "0.1"
log = "^0.4"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
